# cuda-cmake-template

./: CMakeLists.txt  README.md  helloworld.cu
